# Xin-Yi

./: .env.example  .gitignore  .gitmodules  BILINGUAL_TRANSLATION_COMPLETE.md  CLOUDFLARE_DEPLOYMENT.md  CLOUDFLARE_PAGES_SETUP.md  CODE_WALKTHROUGH.md  COMPLETE_LAURA_INTEGRATION.md  DEPLOYMENT_FIX.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PROMPTS.md  DOCUMENT_GENERATION_SUMMARY.md  FINAL_UPDATES_SUMMARY.md  FRONTEND_GUIDE.md  FRONTEND_LOADING_FIX.md  FRONTEND_UPDATES_SUMMARY.md  GET_CLOUDFLARE_CREDENTIALS.md  GITHUB_PREP.md  HARDWARE_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  LAURA_DASHBOARD_GUIDE.md  NEXT_STEPS.md  PROFESSIONAL_DOCUMENTS_SUMMARY.md  README.md  README_DEVICES.md  README_EN.md  README_PLATFORM.md  RECAMERA_TROUBLESHOOTING_SUMMARY.md  RPI_TESTING_GUIDE.md  SENSECAP_SETUP.md  SIGNATURE_INTEGRATION.md  TEST_IMAGES.md  WMS_DOCUMENTS_GUIDE.md  check_recamera.sh  deploy-to-cloudflare.sh  pyproject.toml  recamera_auto_configure.py  recamera_usb_gadget_fix.md  sensecap_quickstart.sh  start_frontend.sh  (+6 more)
backend/: app.py  app_platform.py  app_supabase.py  catalog_assets.py  database.py  database_supabase.py
frontend/: _headers  _redirects  app.js  dashboard.html  dashboard.js  index.html  inventory.html  landing.css  product_detail.html  product_detail.js  style.css  (+1 more)
frontend-next/: README.md  next.config.ts  package-lock.json  package.json
sensecap_watcher_xinyi/main/: CMakeLists.txt  config.c  http_server.c  main.c  websocket_handler.c  wifi_manager.c  xinyi_client.c
sensecap_watcher_xinyi/main/include/: app_state.h  config.h  http_server.h  wifi_manager.h
(+65 files in other folders)
